# training

./: .gitignore  README.md
.github/workflows/: deploy.yml
deploy/: Dockerfile  docker-compose.yml  requirements.txt
deploy/pulumi/: Pulumi.dev.yaml  Pulumi.yaml  __main__.py  requirements.txt
elc/session2/: chat_completion.ps1  chat_completion.sh
elc/session2/notebooks/: .env.sample  01_chat_completion_seed.ipynb  02_rag_pipeline.ipynb  03_vlm_rag_pipeline.ipynb  04_gradio_qa.ipynb  pyproject.toml
elc/session2/rag/: .env.sample  01_ingest.py  02_embed.py  03_query.py  README.md  config.py  pyproject.toml
elc/session2/vlm-rag/: .env.sample  01_ingest.py  02_embed.py  03_query.py  04_query_rerank.py  README.md  config.py  pyproject.toml
